<resources>
    <string name="app_name">宅米记账助手</string>
    <string name="mingxi">明细</string>
    <string name="qianbao">钱包</string>
    <string name="tixing">提醒</string>
    <string name="zhongxin">中心</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_account">团队账本</string>
    <string name="single_account">个人账本</string>
    <string name="book_delete">删除账本</string>
    <string name="delete_commit">您确定要删除该账本吗？</string>
    <string name="commit">确定</string>
    <string name="cancel">取消</string>
    <string name="shouru">收入</string>
    <string name="zhichu">支出</string>
    <string name="qita">其他</string>
    <string name="gongzi">工资</string>
    <string name="shenghuofei">生活费</string>
    <string name="hongbao">红包</string>
    <string name="linghuaqian">零花钱</string>
    <string name="waikuaijianzhi">外快兼职</string>
    <string name="touzishouru">投资收入</string>
    <string name="jiangjin">奖金</string>
    <string name="baoxiao">报销</string>
    <string name="xianjin">现金</string>
    <string name="tuikuan">退款</string>
    <string name="zhifubao">支付宝</string>
    <string name="canyin">餐饮</string>
    <string name="jiaotong">交通</string>
    <string name="jiushuiyinliao">酒水饮料</string>
    <string name="shuiguo">水果</string>
    <string name="lingshi">零食</string>
    <string name="maicai">买菜</string>
    <string name="yifuxiebao">衣服鞋包</string>
    <string name="shenghuoyongpin">生活用品</string>
    <string name="huafei">话费</string>
    <string name="hufucaizhuang">护肤彩妆</string>
    <string name="fangzu">房租</string>
    <string name="dianying">电影</string>
    <string name="taobao">淘宝</string>
    <string name="yaopin">药品</string>
    <string name="bianji">编辑</string>
    <string name="back">返回</string>
    <string name="add">添加</string>
    <string name="delete_commit_classify">您确定要删除该分类吗？</string>
    <string name="update_classify">修改类别</string>
    <string name="add_classify_in">添加收入类别</string>
    <string name="add_classify_out">添加支出类别</string>
    <string name="list_classify_in">编辑收入分类</string>
    <string name="list_classify_out">编辑支出分类</string>
    <string name="noOpen">暂未开通此功能</string>
    <string name="weixin">微信</string>
    <string name="yinhangka">银行卡</string>
    <string name="isPay">已付</string>
    <string name="isNotPay">未付</string>
    <string name="me">我</string>
    <string name="team">成员</string>
    <string name="chengyuanguanli">成员管理</string>
    <string name="xinjianchengyuan">新建成员</string>
    <string name="delete_commit_team">您确定要删除该成员吗?</string>
    <string name="update_team">修改成员</string>
    <string name="input_beizhu">输入备注</string>
    <string name="tip">提示</string>
    <string name="paizhao">拍照</string>
    <string name="tuku">从图库中选择</string>
    <string name="money_not_zero">金额不能为0</string>
    <string name="yue">账户余额</string>
    <string name="transferOfAccount">转账</string>
    <string name="month">月</string>
    <string name="beizhu">备注</string>
    <string name="detail">详情</string>
    <string name="delete">删除</string>
    <string name="book">账本</string>
    <string name="time">时间</string>
    <string name="pay">付款</string>
    <string name="norecord">无账本记录</string>
    <string name="delete_commit_record">您确定要删除该记录吗？</string>
</resources>
