<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="15dp"
        android:text="@string/tip"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_light"/>

    <TextView
        android:id="@+id/tv_paizhao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@color/gray2"
        android:text="@string/paizhao"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/shape_text_bg"/>

    <TextView
        android:id="@+id/tv_tuku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@color/gray2"
        android:text="@string/tuku"
        android:gravity="center"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_text_bg"/>

    <TextView
        android:id="@+id/tv_camera_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@color/gray2"
        android:text="@string/cancel"
        android:gravity="center"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_text_bg"/>

</LinearLayout>