<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_account"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="gone"
            android:scaleType="fitXY"
            android:src="@mipmap/welcome" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/iv_account_classify"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:src="@mipmap/icon_qita" />

            <TextView
                android:id="@+id/tv_account_classify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/qita"
                android:textColor="@color/gray1"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_account_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="55.00"
                android:textColor="@color/blue_light"
                android:textSize="30sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/book"
                android:textColor="@color/gray3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_account_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_account"
                android:textColor="@color/gray"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time"
                android:textColor="@color/gray3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_account_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2016/08/08 13:45"
                android:textColor="@color/gray"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pay"
                android:textColor="@color/gray3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_account_payway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhifubao"
                android:textColor="@color/gray"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/team"
                android:textColor="@color/gray3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_account_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me"
                android:textColor="@color/gray"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray_light" />

        <TextView
            android:id="@+id/tv_account_remark"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="20dp"
            android:textColor="@color/gray"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray_light" />

        <TextView
            android:id="@+id/tv_account_bianji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/bianji"
            android:textColor="@color/blue_light"
            android:textSize="25sp" />

    </LinearLayout>

</FrameLayout>