<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_changeColor1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/tv_account_yue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50.00"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yue" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_changeColor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:id="@+id/ll_select_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_account_time1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8月"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_account_time2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="08.01-08.31" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_account_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="181.00"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhichu" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_account_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="55.00"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shouru" />

        </LinearLayout>

    </LinearLayout>


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_down"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
                android:id="@+id/rv_accounts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_gray_light" />

            <LinearLayout
                android:id="@+id/ll_norecord"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_gray_light"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/norecord" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/norecord"
                    android:textColor="@color/gray2"
                    android:textSize="20sp" />

            </LinearLayout>

        </FrameLayout>

    </android.support.v4.widget.SwipeRefreshLayout>


    <TextView
        android:id="@+id/tv_transferOfAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/transferOfAccount"
        android:textColor="@color/blue_light"
        android:textSize="25sp" />

</LinearLayout>
