<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray_light"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_select_out_in">

            <TextView
                android:id="@+id/tv_account_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/shouru"
                android:textColor="@color/blue_light" />

            <TextView
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/gray_light" />

            <TextView
                android:id="@+id/tv_account_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/zhichu"
                android:textColor="@color/gray2" />

        </LinearLayout>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/back" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.5dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:id="@+id/iv_classify_img"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/icon_qita" />

        <TextView
            android:id="@+id/tv_classify_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/qita"
            android:textColor="@color/gray2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_account_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00"
            android:textColor="@color/gray"
            android:textSize="32sp" />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_show_classify"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboard_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:keyBackground="@drawable/bg_seletor_keyboard"
        android:keyTextColor="@color/white"
        android:keyTextSize="25sp"
        android:labelTextSize="25sp"
        android:visibility="gone" />

</LinearLayout>
